Event pages (Context Menu)

--- a/Age Calculator/manifest.json
+++ b/Age Calculator/manifest.json
@@ -13,5 +13,15 @@
         "default_popup":"popup.html"
     },
     "options_page": "option_page.html",
-    "permissions":["storage"]
+
+    "background":{
+        "scripts":["eventPage.js"],
+        "persistent":false
+    },
+
+    "permissions":[
+        "storage",
+        "notifications",
+        "contextMenus"
+    ]
 }
